// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should rendering ExpensesSummary correctly 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    0.00 $
  </h1>
</div>
`;

exports[`Should rendering ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    2,553,667.77 $
  </h1>
</div>
`;

exports[`Should rendering ExpensesSummary correctly with single expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    2.55 $
  </h1>
</div>
`;
